--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -73,7 +73,7 @@
                 <div class="col-4">
                     <div class="card">
                         <h3 class="card-title">modern desing</h3>
-                        <span><i class="fa-solid fa-cloud"></i></i></span>
+                        <span><i class="fa-solid fa-cloud"></i></span>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, exercitationem!</p>
                         <button class="card-btn">learn more <i class="fa-solid fa-arrow-right-long"></i></button>
                     </div>
@@ -139,14 +139,14 @@
 
 
         <!-- TEAM-SECTION -->
-        <section id="work-section">
+        <section id="team-section">
             <h2 class="title">our team</h2>
 
             <div class="inner-work-wrapper">  
                 <div class="col-4">
                     <div class="card">
                         <h3 class="card-title">Alexandra</h3>
-                        <div class="team"> <i class="fa-solid fa-bars"></i></div>
+                        <div class="team"><i class="fa-solid fa-bars-progress"></i></div>
                         <span><img src="assets/team/members3.jpg" alt="team-member"></span>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, exercitationem!</p>
                         <button class="card-btn">learn more <i class="fa-solid fa-arrow-right-long"></i></button>
@@ -169,7 +169,7 @@
                     <div class="card">
                         <h3 class="card-title">Kelly Hidayah</h3>
                         <div class="team"><i class="fa-sharp fa-solid fa-paper-plane"></i></div>
-                        <span><img src="assets/team/3.jpg" alt="team-member"></i></span>
+                        <span><img src="assets/team/3.jpg" alt="team-member"></span>
                         <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, exercitationem!</p>
                         <button class="card-btn">learn more <i class="fa-solid fa-arrow-right-long"></i></button>
                     </div>
